force-app/main/default/objects/HAM_Designation_Priority__c/HAM_Designation_Priority__c.object-meta.xml
<CustomObject>
    <description>Associates designations with campaign priorities</description>
    <label>Designation Priority</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Designation Priority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Designation Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>