force-app/main/default/objects/HAM_Designation_Priority__c/fields/HAM_Campaign_Priority__c.field-meta.xml
<CustomField>
    <fullName>HAM_Campaign_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Priority</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordTypeId</field>
            <operation>equals</operation>
            <value>Comprehensive Campaign</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Designation Priorities</relationshipLabel>
    <relationshipName>Designation_Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>