force-app/main/default/objects/HAM_Designation_Priority__c/fields/HAM_Designation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Designation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gift Designation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Designation Priorities</relationshipLabel>
    <relationshipName>Designation_Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>