force-app/main/default/objects/HAM_Designation_Priority__c/fields/HAM_Designation_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation_Name__c</fullName>
    <formula>HAM_Designation__r.ucinn_ascendv2__Designation_Name__c</formula>
    <label>Designation Name</label>
    <type>Text</type>
</CustomField>