force-app/main/default/objects/HAM_Designation_Priority__c/fields/HAM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_External_ID__c</fullName>
    <description>External ID to be used when inserting or updating data</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>