force-app/main/default/objects/HAM_Designation_Priority__c/fields/HAM_Priority_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Priority_Start_Date__c</fullName>
    <formula>HAM_Campaign_Priority__r.StartDate</formula>
    <label>Priority Start Date</label>
    <type>Date</type>
</CustomField>